--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -1,1 +1,73 @@
+Privacy Policy
 
+Intro
+Hello! Welcome to the King Privacy Policy. This policy describes how King and its other “Group Companies” (Activision Blizzard Inc and its affiliates). collectively described as “King”, “we”, “us” or “our”) and its third-party marketing and advertising partners collect, use, process and share information about you
+
+This Privacy Policy applies to all of our games, whether played on our website www.king.com, on mobile devices, PCs or on other platforms such as Facebook. It also applies to our Marketing and Advertising activities on all platforms and other services that we will provide to you from time to time. In this Privacy Policy we refer to our games, websites, marketing and advertising activities and other services collectively as our "Services".
+
+When you download, access and/or play our games, or interact with our websites or other Services, you acknowledge the collection and use of your information in accordance with this Privacy Policy, including King’s and our advertising partners’ use of your data for targeted advertising purposes as described in the Marketing and Advertising sections of this Privacy Policy. Those sections also explain how you can give your consent by opting in, or withhold or withdraw your consent to the use of your data for targeted advertising purposes. If you have any concerns about providing information to us or it being used as described in this Privacy Policy you should not use our games or other Services.
+
+Please note that this Privacy Policy does not apply when you use the Royal Games website (http://www.royalgames.com/).
+
+This Privacy Policy was last updated on 7.12.2022.
+
+Playing our games
+When you download, access and/or play our games or use our other Services, we collect information about you. Most of this data comes directly from you or your device, such as device information, country and region, and game play information. We use this data to provide our games and Services to you, including for the purposes of optimisation, preventing fraud, customising in-game offers and verifying purchases. We will also use it for the other purposes set out in this Privacy Policy, including for Marketing and Advertising purposes.
+
+Find out more
+Visiting our websites
+When you visit our other websites, such as https://community.king.com, https://candycrushsaga.com, and other websites and forums operated by us (“Websites”), we collect information about you, such as details about how you use and interact with such Websites. We will use the information we collect about you for a number of purposes, including for operating and optimising the Websites, in connection with our advertising purposes, and for research or analysis.
+
+Find out more
+King Profile and Playing Socially
+You can choose to add information to your King Profile or to connect our Services to your account with a third party network (such as Facebook). If you do this, then your personal information will be visible to other players and we’ll also use it for the other purposes set out in this Privacy Policy, including for Marketing and Advertising.
+
+Find out more
+Marketing
+Where we record your preferences as permitting us to do so, (see further below on how to change your preferences) we and our third-party partners use information collected about you to send you marketing communications about other King games and related Services based on your interests. For example, we will send emails, serve ads within our Services or place ads on third party websites, apps and Internet-connected devices.
+
+Find out more
+Advertising
+Our games will include advertising for third party products and services.
+
+King and our advertising partners collect and use information about you to improve advertising, targeting and measurement systems so that we can show you relevant third party ads in our games.
+
+King participates in the IAB Europe Transparency & Consent Framework and complies with its Specifications and Policies. King uses the Consent Management Platform (CMP) with the identification number 28.
+
+Where applicable, we use a CMP to gather consent and permissions for our advertising based activity. Where local laws allow, we will opt you into interest-based advertising by default. You can change your preferences at any time in the setting pages of our games.
+
+Find out more
+Ad identifiers, cookies and similar technologies
+To provide our games, Websites and interest-based advertising, we use ad identifiers, cookies and similar technologies. This section describes our use of these technologies and how you can manage your preferences.
+
+Find out more
+Your rights
+You have certain rights in connection with your personal information and how we handle it. You can exercise these rights at any time by contacting us via any of the methods set out in the Contact Us section below. Users located in the United States should review the US residents section below
+
+Find out more
+Children
+You must be over a certain age to play our games and use our Services, depending on where you live. For the full list of age restrictions by country, please see below. We do not knowingly collect or solicit personal information from or direct or target interest-based advertising to anyone under the ages set out below or under 16 for California residents, or knowingly allow such persons to use our Services. If you believe that we might have any information from or about a child under the age set out below, please Contact Us.
+
+Find out more
+General
+Our Privacy Policy contains further details about:
+
+who we share your information with and the reasons for sharing it;
+measures we take to keep your information secure;
+the legal bases under which we process your data;
+how long we retain your information and where we store it;
+when and why we share your information with third parties, including transfers outside of the European Economic Area (the “EEA”); and
+changes or updates to our Privacy Policy.
+Find out more
+US residents
+In addition to the information provided throughout this Privacy Policy, state privacy laws in the United States require that we disclose to consumers in those states additional information about the processing of their personal data. Below we describe the purposes for which we use and disclose personal data and, for each purpose, the categories of personal data we use and disclose and the categories of third parties to whom we disclose the personal data.
+
+Find out more
+Contact us
+If you have any questions or concerns about any of the matters in relation to this Privacy Policy, including to exercise any of your rights, then there are several way of contacting us:
+
+via our customer services page at https://soporto.king.com/contact;
+if you have questions, please check our FAQs;
+via email to privacy@support.king.com; or
+in writing to King.com Ltd of Aragon House Business Centre, Level 4, Dragonara Road, St Julians STJ3140, Malta.
+For information collected under this Privacy Policy, the data controller is King.com Limited. Our Data Protection Officer can be contacted here: dataprotectionofficer@king.com.
